# JSInjector

./: .gitignore  Cargo.toml  README.md  index.js  server.js
src/: error.rs  lib.rs  main.rs  prelude.rs
src/features/: execute_script.rs  mod.rs  select_page.rs  select_script.rs  setup_browser.rs
src/utils/: debugger.rs  direntry_from.rs  mod.rs
