[package]
name = "jsinjector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
dialoguer = "*"
reqwest = "*"
console = "*"
crossterm = "*"
ctrlc = "*"
sysinfo = "*"
